# unity-cli

./: .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja.md  README.md  RELEASE.md  package.json  pnpm-lock.yaml
.agents/plugins/: marketplace.json
.agents/skills/: unity-addressables  unity-asset-management  unity-cli-usage  unity-csharp-edit  unity-csharp-navigate  unity-editor-tools  unity-gameobject-edit  unity-input-system  unity-playmode-testing  unity-prefab-workflow  unity-scene-create  unity-scene-inspect  unity-ui-automation
.claude-plugin/: marketplace.json
.claude/commands/: release.md
.claude/skills/: gh-skills-sync  unity-csharp-reference
.codex-plugin/: plugin.json
.codex/skills/: unity-development-loop
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  skill-routing-eval.yml  test.yml
.gwt/work/: board-remote-roots.jsonl  events.jsonl  memory.md
.husky/: pre-push
UnityCliBridge/: README.md
UnityCliBridge/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
dev-skills/gh-skills-sync/: SKILL.md
docs/: architecture.md  configuration.md  development.md  migration-notes.md  skills.md  tools.md
lsp/: CodeIndexServiceTests.cs  EditServiceTests.cs  Program.cs  RequestRouterTests.cs  WorkspaceSymbolServiceTests.cs
lsp/Server.Core/: LspCodeIndexService.cs  LspEditService.cs  LspFileLockProvider.cs  LspLogger.cs  LspRequestRouter.cs  (+1 more)
scripts/: publish.sh  switch-unity-manifest.sh
src/: cli.rs  main.rs
tasks/: lessons.md
(+74 files in other folders)
